Bring layout together

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,76 @@
+:root {
+  --gray: #efefef;
+  --darkGray: #767676;
+}
+
 .stockList {
   overflow-y: scroll;
   height: 30vh;
+}
+
+.chooseFile {
+  padding: 2vh;
+  font-size: calc(16px + 0.3vw);
+  text-align: center;
+  font-family: Andale Mono, monospace;
+}
+
+.datePickers {
+  padding: 2vh;
+}
+
+h2 {
+  font-size: calc(16px + 0.7vw);
+}
+
+h3 {
+  font-size: calc(16px + 0.2vw);
+}
+
+.upwardData {
+  display: block;
+  font-size: calc(16px + 0.1vw);
+  padding: 0;
+  margin: 0;
+}
+
+.textData {
+  font-family: Andale Mono, monospace;
+  display: inline-block;
+  margin: 0;
+  padding: 1vh;
+}
+
+.inline {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+}
+
+.datePickersStart {
+  display: inline-block;
+  padding-left: 3vw;
+  padding-right: 3vw;
+}
+
+.datePickersEnd {
+  display: inline-block;
+  padding-left: 3vw;
+  padding-right: 3vw;
+}
+
+#datePickerStart {
+  background-color: var(--gray);
+  font-family: Andale Mono, monospace;
+  font-size: calc(16px + 0.1vw);
+  border: 1px solid var(--darkGray);
+  border-radius: 2px;
+}
+
+#datePickerEnd {
+  font-family: Andale Mono, monospace;
+  font-size: calc(16px + 0.1vw);
+  background-color: var(--gray);
+  border: 1px solid var(--darkGray);
+  border-radius: 2px;
 }
